--- a/templates/redis-deployment.yaml
+++ b/templates/redis-deployment.yaml
@@ -23,11 +23,23 @@ spec:
         volumeMounts:
         - mountPath: /redis-master-data
           name: data
+          {{- if .Values.ceph.enabled }}
+          subPath: {{ .Values.ceph.masterStorageId }}
+          {{- end }}
       volumes:
       - name: data
-      {{- if .Values.persistentVolume.enabled }}
-        persistentVolumeClaim:
-          claimName: {{ if .Values.persistentVolume.existingClaim }}{{ .Values.persistentVolume.existingClaim }}{{- else }}{{ template "name" . }}{{- end }}
+      {{- if .Values.ceph.enabled }}
+        flexVolume:
+          driver: rook.io/rook
+          fsType: ceph
+          options:
+            fsName: data
+            clusterName: rook
       {{- else }}
-        emptyDir: {}
+        {{- if .Values.persistentVolume.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ if .Values.persistentVolume.existingClaim }}{{ .Values.persistentVolume.existingClaim }}{{- else }}{{ template "name" . }}{{- end }}
+        {{- else }}
+          emptyDir: {}
+        {{- end -}}
       {{- end -}}
